--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset = "UTF-8">
     <meta name ="viewport" content="width=device-width, 
     initial scale=1.0">
-    <title>Kata 1 Billetes</title>
+    <title>RegBox 1.0.0</title>
 </head>
 
 <body>
