--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1 id = "titulo">Kata 1 Billetes</h1>
-
-    <form onchange="calcular()">
+    <h3 id = "titulo"></h3>
+    <br>
+    <form onchange="calculate()">
 
         Dinero a pagar
         <input type="text" id = "dinero"> 
@@ -33,10 +33,12 @@
         <input type="text" id = "maxBilletesDe10">
 
     </form>
-
+<br>
+    <button onclick="calculate()"> calcular</button>
+<br><br>
     <div id="resultado">
 
-        Aca va el resultado
+        
 
     </div>
 
