--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset = "UTF-8">
-    <meta name ="viewport" content="width=device-width, 
-    initial scale=1.0">
+    <meta name ="viewport" content="width=device-width">
     <title>RegBox 1.0.0</title>
 </head>
 
 <body>
     <h3 id = "titulo"></h3>
     <br>
-    <form onchange="calculate()">
+    <form onchange="">
 
         Dinero a pagar
         <input type="text" id = "dinero"> 
