--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         
 
     </div>
+    <br><br><br><br>
+<footer>
+    <div>
+        <i>RegBox by Martin Belatti  </i><a href="https://github.com/BelattiMartinE/kataCajaRegistradora/issues"> - Report a bug</a>
+    </div>
+</footer>
 
     <script type = "text/javascript" src="billetes.js"></script>
 </body>
